--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
       </article>
 
 
-      <!--        - #PORTFOLIO 
+      <!--        - #PORTFOLIO  ** REARRANGE for better layout & flow, like moving the XML file to the top?
 		Editing (check)
 			YALDA (all) = 3 (check)
 			DemocracyLab (check)
@@ -885,7 +885,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 
             <li class="project-item  active" data-filter-item data-category="technical writing">
-              <a href="./Ionic6-Manual_v2.html" target="_blank">
+              <a href="./Ionic6-Manual.html" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
