Fixed xml file names

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 
             <li class="project-item  active" data-filter-item data-category="technical writing">
-              <a href="./Ionic6-Manual.html" target="_blank">
+              <a href="./Ioniq6-Manual.html" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
