Fixed xml file paths

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="editing">
-              <a href="https://heyzine.com/flip-book/a87fa565c4.html">
+              <a href="https://heyzine.com/flip-book/a87fa565c4.html" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -723,7 +723,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="editing">
-              <a href="https://heyzine.com/flip-book/81b7a4a44f.html">
+              <a href="https://heyzine.com/flip-book/81b7a4a44f.html" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -741,7 +741,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="editing">
-              <a href="https://heyzine.com/flip-book/035b705f81.html">
+              <a href="https://heyzine.com/flip-book/035b705f81.html" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -759,7 +759,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="editing">
-              <a href="https://blog.democracylab.org/democracylab-globally-inclusive/">
+              <a href="https://blog.democracylab.org/democracylab-globally-inclusive/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -777,7 +777,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="editing">
-              <a href="https://blog.democracylab.org/supporting-diversity-in-the-health-sciences/">
+              <a href="https://blog.democracylab.org/supporting-diversity-in-the-health-sciences/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -795,7 +795,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="editing">
-              <a href="https://blog.democracylab.org/how-are-organizations-managing-data-transformations/">
+              <a href="https://blog.democracylab.org/how-are-organizations-managing-data-transformations/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -813,7 +813,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 
             <li class="project-item  active" data-filter-item data-category="content development">
-              <a href="https://blog.democracylab.org/building-the-database-to-end-school-violence/">
+              <a href="https://blog.democracylab.org/building-the-database-to-end-school-violence/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -831,7 +831,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="content development">
-              <a href="https://blog.democracylab.org/community-college-students-hack-for-the-future/">
+              <a href="https://blog.democracylab.org/community-college-students-hack-for-the-future/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -849,7 +849,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="content development">
-              <a href="https://blog.democracylab.org/optimizing-municipal-infrastructure-with-smart-city-planning/">
+              <a href="https://blog.democracylab.org/optimizing-municipal-infrastructure-with-smart-city-planning/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -867,7 +867,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="project-item  active" data-filter-item data-category="content development">
-              <a href="https://blog.democracylab.org/volunteers-make-the-2021-summer-create-a-thon-a-success/">
+              <a href="https://blog.democracylab.org/volunteers-make-the-2021-summer-create-a-thon-a-success/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -885,7 +885,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 
             <li class="project-item  active" data-filter-item data-category="technical writing">
-              <a href="./Ioniq6-Manual.html" target="_blank">
+              <a href="./assets/files/Ioniq6-Manual.html" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -935,10 +935,10 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
           <ul class="blog-posts-list">
 		  
 		  	<li class="blog-post-item">
-              <a href="#">
+              <a href="./assets/files/Ioniq6-Manual.xml">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/ioniq_xml" alt="Design digest #79" loading="lazy">
+                  <img src="./assets/images/ioniq_xml.jpg" alt="xml file sample" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -950,7 +950,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
                   </div>
 
-                  <h3 class="h3 blog-item-title">[placeholder] XML raw file</h3>
+                  <h3 class="h3 blog-item-title">XML raw file</h3>
 
                   <p class="blog-text">
                     Raw XML file I created for the Ioniq6 manual.
@@ -962,10 +962,10 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
             </li>
 			
 			<li class="blog-post-item">
-              <a href="#">
+              <a href="./assets/files/ioniq6-Manual_XSLTstylesheet.xsl">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/ioniq_xslt.jpg" alt="Design digest #79" loading="lazy">
+                  <img src="./assets/images/ioniq_xslt.jpg" alt="xslt sample file" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -977,10 +977,10 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
                   </div>
 
-                  <h3 class="h3 blog-item-title">[placeholder] XSLT raw file</h3>
+                  <h3 class="h3 blog-item-title">XSLT raw file</h3>
 
                   <p class="blog-text">
-                    Raw transformation file converting the Ioniq6 XML file into HTML file.
+                    Transformation file converting the Ioniq6 Manual XML into HTML with XSLT and CSS.
                   </p>
 
                 </div>
