--- a/assets/files/Ioniq6-Manual.html
+++ b/assets/files/Ioniq6-Manual.html
@@ -100,8 +100,7 @@
                         alert.</li>
                   </ul>
                   <div><span style="margin-left:40px;border-width:1px;border-style:solid;border-color:#b4b7ae"> <u>Location</u>: Setup &gt; Vehicle &gt; Driving Assistance &gt; Warning Methods </span></div>
-                  <div><span> style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000"&gt;
-                        **Note: The Driver Assistance Warning Methods settings control multiple features.
+                  <div><span style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000">**Note: The Driver Assistance Warning Methods settings control multiple features.
                         Changing the haptic or volume settings of this feature will affect these other features
                         as well: Rear Cross-Traffic Alert, Lane safety, and Safe Exit Alert. </span></div>
                </li>
@@ -137,8 +136,7 @@
                         you can toggle the haptic response on or off.</li>
                   </ul>
                   <div><span style="margin-left:40px;border-width:1px;border-style:solid;border-color:#b4b7ae">Setup &gt; Driver Assistance &gt; Warning Methods </span></div>
-                  <div><span> style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000"&gt;
-                        **Note: The Driver Assistance Warning Methods settings control multiple features.
+                  <div><span style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000">**Note: The Driver Assistance Warning Methods settings control multiple features.
                         Changing the haptic or volume settings of this feature will affect these other features
                         as well: Lane safety, Blind Spot Sensor, and Safe Exit Alert. </span></div>
                </li>
@@ -153,8 +151,7 @@
                      <li style="display:list-item;list-style-position:inside;list-style-type:disc"> <u>Controls</u>: You can adjust the volume of this alert. (You cannot mute this alert.) </li>
                   </ul>
                   <div><span style="margin-left:40px;border-width:1px;border-style:solid;border-color:#b4b7ae">Setup &gt; Driver Assistance &gt; Warning Methods </span></div>
-                  <div><span> style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000"&gt;
-                        **Note: The Driver Assistance Warning Methods settings control multiple features.
+                  <div><span style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000">**Note: The Driver Assistance Warning Methods settings control multiple features.
                         Changing the haptic or volume settings of this feature will affect these other features
                         as well: Rear Cross-Traffic Alert, Lane safety, and Blind Spot Sensor. </span></div>
                </li>
@@ -171,8 +168,7 @@
                      <li style="display:list-item;list-style-position:inside;list-style-type:disc"> <u>Controls</u>: You can adjust the volume of the audio alert.</li>
                   </ul>
                   <div><span style="margin-left:40px;border-width:1px;border-style:solid;border-color:#b4b7ae"> Setup &gt; Driver Assistance &gt; Warning Methods </span></div>
-                  <div><span> style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000"&gt;
-                        **Note: The Driver Assistance Warning Methods settings control multiple features.
+                  <div><span style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000">**Note: The Driver Assistance Warning Methods settings control multiple features.
                         Changing the haptic or volume settings of this feature will affect these other features
                         as well: Rear Cross-Traffic Alert, Blind Spot Sensor, and Safe Exit Alert. </span></div>
                </li>
@@ -204,8 +200,7 @@
                         0.</li>
                   </ul>
                   <div><span style="margin-left:40px;border-width:1px;border-style:solid;border-color:#b4b7ae"> Setup &gt; Sound &gt; Navigation &gt; Navigation Alerts </span></div>
-                  <div><span> style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000"&gt;
-                        **Note: The Navigation Alert volume affects all Navigation Alerts. Changing the volume
+                  <div><span style="margin-left:40px;border-width:2px;border-style:solid;border-color:#cc0000">**Note: The Navigation Alert volume affects all Navigation Alerts. Changing the volume
                         of this feature will affect other navigation features. </span></div>
                </li>
                <li style="padding-top:1em"> <b>Speed Limit Detection</b> <br><div style="padding-left:25px"> This feature displays the posted speed on the dashboard using navigation data.</div>
