--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
       <!--
         - #ABOUT
+			** Add more about learning new things, new ways to make my process more efficient
       -->
 
       <article class="about  active" data-page="about">
@@ -195,7 +196,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
         <section class="about-text">
           <p>
-           I'm a professionally trained editor with diplomatic communications style and strong analytical eye. I have over twelve years of experience strategizing and developing internal communications, technical guides, newsletters, and web publications — with experience in training/instruction, project/program management, process development and continuous improvement, and team management. I love documenting complex processes and technical systems and  in easily digestible content with clarity, context, and rationale. 
+           I'm a professionally trained editor with diplomatic communications style and strong analytical eye. I have over twelve years of experience strategizing and developing internal communications, technical guides, newsletters, and web publications — with experience in training/instruction, project/program management, process development and continuous improvement, team management, and generative AI. I love learning about complex processes and technical systems and documenting them in easily digestible content with clarity, context, and rationale. 
 
           </p>
 
@@ -211,7 +212,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
         <section class="service">
 
-          <h3 class="h3 service-title">What I offer</h3> <!-- UPDATE the descriptions -->
+          <h3 class="h3 service-title">What I offer</h3> 
 
           <ul class="service-list">
 
@@ -284,8 +285,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
         </section>
 
 
-        <!--
-          - testimonials ... ***Remove Clients, pull snippets from FORTE FEEDBACK for Testimonials
+        <!-- testimonials 
         -->
 
         <section class="testimonials">
@@ -400,7 +400,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 	</article>
 
       <!--
-        - #RESUME ***MAKE THE DESCRIPTIONS MORE CONSISTENT GRAMMATICALLY, parallel strcuture ***
+        - #RESUME 
       -->
 
       <article class="resume" data-page="resume">
@@ -441,7 +441,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
               <div class="title-wrapper">
                 <h5 class="h5">Technical Skills</h5>
-                <data>Markup (XML &amp; XSLT, HTML, CSS) • Microsoft Office Suite • Google Workspace • Adobe Acrobat • SQL, Excel &amp; Data Analysis</data>
+                <data>Markup (XML &amp; XSLT, HTML, CSS) • AI Prompt Engineering • Microsoft Office Suite • Google Workspace • Adobe Acrobat • SQL, Excel &amp; Data Analysisv</data>
               </div>
 
             </li>
@@ -469,7 +469,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2021 — Present</span>
 
               <p class="timeline-text">
-                I edit articles for the quarterly newsletter, checking rhetorical strength, journalistic structure, logic and line flow, and style consistency across articles of varying topics and tone. I created YALDA's in-house style guide.
+                I edit articles for the quarterly newsletter, checking rhetorical strength, journalistic structure, logic and line flow, and style consistency across articles of varying topics and tone. As one key accomplishment, I created YALDA's in-house style guide, achieving style consistency and reducing editorial effort by 30%. 
               </p>
 
             </li>
@@ -481,7 +481,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2020 — present</span>
 
               <p class="timeline-text">
-                Defined scope of role supporting a newly formed escalations management team, and expanded that role into leading a team of Program Managers (PMs) and Data Analysts supporting an operational team of over 150: Developed team strategy, wrote charter and project roadmap templates; created case handling workflows and process documentation;, including user guides that standardized case categorization models; developed content strategy for onboarding new programs
+                I defined scope of this role supporting a newly formed escalations management team of over 150, and expanded that role into leading a team of Program Managers (PMs) and Data Analysts: developed team strategy, wrote charter and project roadmap templates; created case handling workflows and process documentation;, including user guides that standardized case categorization models; developed content strategy for onboarding new programs; and adopted generative AI tools in team's workflow, boosting efficiency by up to 88%.
               </p>
 
             </li>
@@ -493,7 +493,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2021</span>
 
               <p class="timeline-text">
-                I joined the volunteer marketing team to support the org’s mission and gain new skills: Collaborated with marketing team and leadership to plan content development and publication strategy for blog and newsletters.
+                I joined the volunteer marketing team to support the org’s mission and gain new skills: Collaborated with marketing team and leadership to plan content development and publication strategy for blog and newsletters. See the Portoflio page for content I worked on.
               </p>
 
             </li>
@@ -505,7 +505,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2018 — 2020</span>
 
               <p class="timeline-text">
-                Scale up a newly launched risk analysis process: Documented complex technical systems (tools / workflow) and business policies for multinational operations team; created communications strategy for change management; established KPIs and reporting model, launched user forum to collect feedback and troubleshoot issues; analyzed metrics and anecdotes to improve policy documents and training material.
+                I scaled up a newly launched risk analysis process: Documented complex technical systems (tools / workflow) and business policies for multinational operations team; created communications strategy for change management; established KPIs and reporting model; launched user forum to collect feedback and troubleshoot issues; analyzed metrics and anecdotes to improve policy documents and training material. As a key accomplishment, my efforts improved operational performance quality by over 100%.
               </p>
 
             </li>
@@ -517,7 +517,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2014 — 2018</span>
 
               <p class="timeline-text">
-               Documented pilot process conducting new account risk assessment for loan applications, drafted business proposal, and developed content for procedural and policy guidance; successfully scaled out the pilot into a full program and onboarded and trained the new operational team
+               I successfully scaled out a pilot process conducting new account risk assessment for loan applicationsthe pilot into a full program: I documented the process, drafted the business proposal, developed content for procedural and policy guidance, and onboarded and trained the new operational team.
 
               </p>
 
@@ -530,7 +530,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2012 — 2014</span>
 
               <p class="timeline-text">
-              Developed training content and operational guides, standardized escalations submission forms, and created case study reports for senior leadership
+              I planned and developed content for over a dozen new training modules and operational guides, standardized escalations submission forms, and created case study reports for senior leadership.
               </p>
 
             </li>
@@ -589,21 +589,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
       </article>
 
 
-      <!--        - #PORTFOLIO  ** REARRANGE for better layout & flow, like moving the XML file to the top?
-		Editing (check)
-			YALDA (all) = 3 (check)
-			DemocracyLab (check)
-				Globally Inclusive https://blog.democracylab.org/democracylab-globally-inclusive/
-				Diversity in Health Science https://blog.democracylab.org/supporting-diversity-in-the-health-sciences/
-				Growing with Data https://blog.democracylab.org/how-are-organizations-managing-data-transformations/
-		Content Development (check)
-			DemocracyLab (check)
-				No School Violence, interviewed project manager for source material, editied drafts https://blog.democracylab.org/building-the-database-to-end-school-violence/
-				Hack for the Future, drafted article and coordinated edits https://blog.democracylab.org/community-college-students-hack-for-the-future/
-				Optimizing Municipal Infrastructure https://blog.democracylab.org/optimizing-municipal-infrastructure-with-smart-city-planning/
-				Summer Create-a-thon, interviewed event participants, drafted article, and coordinated edits https://blog.democracylab.org/volunteers-make-the-2021-summer-create-a-thon-a-success/
-		Technical Writing (placeholder - update once completed)
-			XML personal project - create a webpage on Github for it once it's done, and include the raw XML and XSLT files in the editing samples
+      <!--        - #PORTFOLIO  
       -->
 
       <article class="portfolio" data-page="portfolio">
@@ -670,7 +656,25 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="editing">
+            <li class="project-item  active" data-filter-item data-category="technical writing">
+              <a href="./assets/files/Ioniq6-Manual.html" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="open-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ioniq_manual.jpg" alt="ioniq 6 manual" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Ioniq6 manual</h3>
+
+                <p class="project-category">Technical writing (original content built in an XML file, transormed into HTML)</p>
+
+              </a>
+            </li>
+			
+			<li class="project-item  active" data-filter-item data-category="editing">
               <a href="https://heyzine.com/flip-book/a87fa565c4.html" target="_blank">
 
                 <figure class="project-img">
@@ -681,7 +685,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
                   <img src="./assets/images/YALDA-2021Q2.jpg" alt="yalda newsletter" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">YALDA Q2 2021</h3>
+                <h3 class="project-title">YALDA Vol.3 #2 2021</h3>
 
                 <p class="project-category">Editing</p>
 
@@ -699,7 +703,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
                   <img src="./assets/images/YALDA-2021Q1.jpg" alt="yalda newsletter" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">YALDA Q1 2021</h3>
+                <h3 class="project-title">YALDA Vol.3 #1 2021</h3>
 
                 <p class="project-category">Editing</p>
 
@@ -717,7 +721,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
                   <img src="./assets/images/YALDA-2020Q4.jpg" alt="yalda newsletter" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">YALDA Q4 2020</h3>
+                <h3 class="project-title">YALDA Vol.2 #4 2020</h3>
 
                 <p class="project-category">Editing</p>
 
@@ -850,24 +854,6 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="technical writing">
-              <a href="./assets/files/Ioniq6-Manual.html" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="open-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/ioniq_manual.jpg" alt="ioniq 6 manual" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Ioniq6 manual</h3>
-
-                <p class="project-category">Technical writing (original content built in an XML file, transormed into HTML)</p>
-
-              </a>
-            </li>
-
           </ul>
 
         </section>
@@ -876,18 +862,6 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
 
       <!--        - #BLOG
-		(check) YALDA intro: "Line edit: trimming and rephrasing / paraphrasing quotations. Some structural editing to smooth the general flow." (YALDA_intro.*)
-		(check) YALDA advocating: "Restructured as a sort of business proposal." (YALDA_advocating.*)
-		(check) YALDA exposition: "Restructured to focus the topics and create better narrative cohesion and flow" (YALDA_exposition.*)
-		(check) YALDA Covid: "Line edits for clarity and flow" (YALDA_covid.*)
-		(check) Project Style Sheet - YALDA: "Combining international styles from OED and United Nations, with publisher-specified requirements." (YALDA_style.*)
-		(check) DLab WGU hack: "drafted the article and coordinated with other volunteers for edits (shown in the comments)." (DLab_hack.*)
-		(check) DLab inclusivity: "Structural edits" (DLab_inclusivity.*)
-		(check) DLab spotlight: "I interviewed the project manager for source material and edited the first draft." (DLab_spotlight.*)
-		(check) DLab data "Line edits to condense the article for better focus and flow" (DLab_data.*)
-		XML raw file: "Raw XML file for the Ioniq6 manual" (ioniq_xml.*)
-		XSLT raw file: "Raw transformation file converting the Ioniq6 XML file into HTML file." (ioniq_xslt.*)
-		
       -->
 
       <article class="blog" data-page="editing samples">
@@ -1204,39 +1178,6 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
       </article>
 
-      <!--        - #CONTACT
-      
-
-      <article class="contact" data-page="contact">
-
-        <header>
-          <h2 class="h2 article-title">Contact</h2>
-        </header>
-
-        <section class="contact-form">
-
-          <h3 class="h3 form-title">Contact Form</h3>
-
-          <form action="#" class="form" data-form>
-
-            <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
-
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
-            </div>
-
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
-
-            <button class="form-btn" type="submit" disabled data-form-btn>
-              <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
-            </button>
-
-          </form>
-
-        </section>
-
-      </article> -->
 
     </div>
 
