Updated index - Resume
Revised resume details to consolidate volunteer work as Freelance; other minor edits to experience descriptions

--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!-- ***** SAVE AS TO index.html WHEN FINISED ***** 
-
-Section 1: About Me - Summary of experience, Skills, Statement of Purpose - ** revise summary & skills, add statement & testimonials, remove Clients
-
-Section 2: Resume - Professional Experience, Volunteer Work, Education - ** done, ready for line & proofing
-
-Section 3: Portfolio - links to published records - ** add XML & try rearranging for better visual balance
-
-Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
-
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -441,7 +429,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
               <div class="title-wrapper">
                 <h5 class="h5">Technical Skills</h5>
-                <data>Markup (XML &amp; XSLT, HTML, CSS) • AI Prompt Engineering • Microsoft Office Suite • Google Workspace • Adobe Acrobat • SQL, Excel &amp; Data Analysisv</data>
+                <data>Markup (XML &amp; XSLT, HTML, CSS, JSON) • CMS &amp; Technical Authoring Tools • Microsoft Office Suite • Google Workspace • Adobe Acrobat • Generative AI • SQL, Excel &amp; Data Analysisv</data>
               </div>
 
             </li>
@@ -464,12 +452,13 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Chief Editor at Youth Alliance for Leadership and Development in Africa (YALDA)</h4>
+              <h4 class="h4 timeline-item-title">Freelance Editor &amp; Content Developer</h4>
 
               <span>2021 — Present</span>
 
               <p class="timeline-text">
-                I edit articles for the quarterly newsletter, checking rhetorical strength, journalistic structure, logic and line flow, and style consistency across articles of varying topics and tone. As one key accomplishment, I created YALDA's in-house style guide, achieving style consistency and reducing editorial effort by 30%. 
+                • Chief Editor at Youth Alliance for Leadership and Development in Africa (YALDA): I achieved rhetorical strength, journalistic structure, and style consistency for quarterly newsletters by defining newsletter style strategy and creating house style guide. I reduced editorial effort by 30% training the content development team on the new style standards. <br>
+				• Content Developer, Marketing Team at DemocracyLab: I collaborated with marketing team and leadership in Google Workspace to plan content development and publication strategy, conducted project research and client interviews for blog and newsletters articles.
               </p>
 
             </li>
@@ -481,19 +470,10 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2020 — present</span>
 
               <p class="timeline-text">
-                I defined scope of this role supporting a newly formed escalations management team of over 150, and expanded that role into leading a team of Program Managers (PMs) and Data Analysts: developed team strategy, wrote charter and project roadmap templates; created case handling workflows and process documentation;, including user guides that standardized case categorization models; developed content strategy for onboarding new programs; and adopted generative AI tools in team's workflow, boosting efficiency by up to 88%.
-              </p>
-
-            </li>
-			
-			<li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Content Manager, Marketing Team, at DemocracyLab</h4>
-
-              <span>2021</span>
-
-              <p class="timeline-text">
-                I joined the volunteer marketing team to support the org’s mission and gain new skills: Collaborated with marketing team and leadership to plan content development and publication strategy for blog and newsletters. See the Portoflio page for content I worked on.
+                I support an escalations management team of over 150: I created the case handling workflows, process documentation, and user guides; built analytical framework to influence strategic decision making; collaborated with leadership and cross-functional partners on project planning and change management communication strategy; integrated AI tooling into workflows. <br>
+				• Reduced case volume by 30% and incident rates by 17.5% by streamlining intake process, developing new data collection model, and creating user guides that standardized case categorization. <br>
+				• Defined scope of role and built team of PMs &amp; BAs: developed team strategy, wrote charter and project roadmap; expanded team scope from supporting 3 programs to 11 programs. <br>
+				• Met compliance with data safety and consumer protection regulations by developing data collection process and writing technical documentation.
               </p>
 
             </li>
@@ -505,7 +485,9 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2018 — 2020</span>
 
               <p class="timeline-text">
-                I scaled up a newly launched risk analysis process: Documented complex technical systems (tools / workflow) and business policies for multinational operations team; created communications strategy for change management; established KPIs and reporting model; launched user forum to collect feedback and troubleshoot issues; analyzed metrics and anecdotes to improve policy documents and training material. As a key accomplishment, my efforts improved operational performance quality by over 100%.
+                I wrote technical documentation of tools, workflow, and business policies through proprietary CMS tools for multinational operations team; created communications strategy for change management; established KPIs and reporting model; launched user forum to collect feedback &amp; troubleshoot; analyzed metrics and anecdotes to influence policy changes and update documentation.<br>
+				•	Improved operational performance quality by over 100% by analyzing performance data and user feedback, then publishing dozens of procedure and policy guides and hosting training sessions
+				
               </p>
 
             </li>
@@ -517,8 +499,7 @@ Seciont 4: Editing Samples - mostly done; waiting for final XML & XSLT files
               <span>2014 — 2018</span>
 
               <p class="timeline-text">
-               I successfully scaled out a pilot process conducting new account risk assessment for loan applicationsthe pilot into a full program: I documented the process, drafted the business proposal, developed content for procedural and policy guidance, and onboarded and trained the new operational team.
-
+               I successfully scaled out a pilot process conducting new account risk assessment for loan applications into a full program: I documented the process, drafted the business proposal, developed content for procedural and policy guidance, and onboarded and trained the new operational team.
               </p>
 
             </li>
