Updated Index - testimonials
Added names to testimonials

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                  <img src="./assets/images/icon-quote.svg" alt="former manager quote" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Former manager</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Bradley - Former manager</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -307,7 +307,7 @@
                   <img src="./assets/images/icon-quote.svg" alt="colleague quote" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Colleague</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Eric - Colleague</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -325,7 +325,7 @@
                   <img src="./assets/images/icon-quote.svg" alt="colleague quote" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Colleague</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Samantha - Colleague</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
